# paper-watch

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  config.example.toml  pyproject.toml  run.sh
.github/workflows/: ci.yml
examples/: com.example.paper-watch.plist
prompts/: evaluate.md
src/paper_watch/: __init__.py  cli.py
tests/: test_paper_watch.py
