[project]
name = "paper-watch"
version = "0.1.0"
description = "Configurable paper monitoring with Claude CLI relevance scoring"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "morixxfoxdata" },
]
dependencies = [
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "slack-sdk>=3.31.0",
]

[project.scripts]
paper-watch = "paper_watch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = true
